# BetterWallpaper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HOWTO_WINDOWS.md  LICENSE  MCP_SETUP_GUIDE.json  README.md  answers.md  betterwallpaper.desktop  build_log.txt  config.json  install.sh  install_deps.sh  install_deps_pop.sh  libGLEW.so.2.2  plan.md  plan2.md  plan3.md  prompt.md  reproduce_monitor  reproduce_monitor.cpp
.github/: copilot-instructions.md
cmake/: FindWaylandProtocols.cmake
data/: com.github.betterwallpaper.xml  io.github.misiix9.betterwallpaper.metainfo.xml
documentation/: AGENT_HANDOVER.md  IDEAS_AND_IMPROVEMENTS.md  WALLPAPER_SWITCHING_PROCESS.md
flatpak/: org.bwp.BetterWallpaper.yml
packaging/: betterwallpaper-daemon.service  betterwallpaper-tray.desktop  com.github.BetterWallpaper.service
plans/: 01_master_plan.md  active_context.md  design_system.md  progress_log.md  roadmap_answers.md  roadmap_questions.md  spec_answers.md  spec_questions.md
po/: LINGUAS  POTFILES.in  betterwallpaper.pot
src/core/: CMakeLists.txt
src/core/audio/: AudioAnalyzer.cpp  AudioAnalyzer.hpp
src/core/config/: ConfigManager.cpp  ConfigManager.hpp  ProfileManager.cpp  ProfileManager.hpp  SettingsSchema.hpp
src/core/hyprland/: HyprlandIPC.cpp  HyprlandIPC.hpp  HyprlandManager.cpp  HyprlandManager.hpp
src/core/i18n/: I18n.cpp  I18n.hpp
src/core/input/: InputManager.cpp  InputManager.hpp  KeybindManager.cpp  KeybindManager.hpp
src/core/ipc/: DBusClient.cpp  DBusClient.hpp  DBusService.cpp  DBusService.hpp  IIPCClient.hpp  IIPCService.hpp  IPCClientFactory.hpp  IPCServer.hpp  IPCServiceFactory.hpp  LinuxIPCClient.cpp  LinuxIPCClient.hpp  NamedPipeClient.hpp  NamedPipeService.cpp  NamedPipeService.hpp
src/core/monitor/: MonitorInfo.hpp  MonitorManager.cpp  MonitorManager.hpp  WaylandMonitor.cpp  WaylandMonitor.hpp
src/core/notification/: NotificationManager.cpp  NotificationManager.hpp
src/core/power/: PowerManager.cpp  PowerManager.hpp
src/core/scheduler/: Scheduler.cpp  Scheduler.hpp
src/core/services/: AutoTagService.hpp
src/core/slideshow/: SlideshowManager.cpp  SlideshowManager.hpp
src/core/steam/: DownloadQueue.cpp  DownloadQueue.hpp  SteamAPIClient.cpp  SteamAPIClient.hpp  SteamCMDWorker.cpp  SteamCMDWorker.hpp  SteamService.cpp  SteamService.hpp  SteamWorkshopClient.cpp  SteamWorkshopClient.hpp
src/core/system/: AutostartManager.cpp  AutostartManager.hpp
src/core/theming/: ColorExtractor.cpp  ColorExtractor.hpp  ThemeApplier.cpp  ThemeApplier.hpp
src/core/transition/: Easing.hpp  EffectFactory.cpp  EffectFactory.hpp  TransitionEffect.hpp  TransitionEngine.cpp  TransitionEngine.hpp
src/core/transition/effects/: AdvancedEffects.cpp  AdvancedEffects.hpp  BasicEffects.cpp  BasicEffects.hpp
src/core/utils/: Blurhash.cpp  Blurhash.hpp  Constants.hpp  Error.cpp  Error.hpp  FileUtils.cpp  FileUtils.hpp  GtkPtr.hpp  InteractiveProcess.cpp  InteractiveProcess.hpp  Logger.cpp  Logger.hpp  ProcessUtils.cpp  ProcessUtils.hpp  SafeProcess.cpp  SafeProcess.hpp  StringUtils.cpp  StringUtils.hpp  SystemUtils.cpp  SystemUtils.hpp  ToastManager.cpp  ToastManager.hpp
src/core/wallpaper/: FolderManager.cpp  FolderManager.hpp  IWallpaperSetter.hpp  LibraryScanner.cpp  LibraryScanner.hpp  NativeWallpaperSetter.cpp  NativeWallpaperSetter.hpp  TagManager.cpp  TagManager.hpp  ThumbnailCache.cpp  ThumbnailCache.hpp  TransitionPolicy.cpp  TransitionPolicy.hpp  WallpaperInfo.hpp  WallpaperLibrary.cpp  WallpaperLibrary.hpp  WallpaperManager.cpp  WallpaperManager.hpp  WallpaperPreloader.cpp  WallpaperPreloader.hpp  WallpaperRenderer.hpp  WallpaperSetterFactory.hpp  WallpaperTransitionManager.cpp  WallpaperTransitionManager.hpp  WallpaperWindow.cpp  WallpaperWindow.hpp  WindowsWallpaperSetter.hpp
src/core/wallpaper/renderers/: StaticRenderer.cpp  StaticRenderer.hpp  VideoRenderer.cpp  VideoRenderer.hpp  WallpaperEngineRenderer.cpp  WallpaperEngineRenderer.hpp
src/core/wallpaper/setters/: GnomeWallpaperSetter.hpp  HyprlandWallpaperSetter.hpp  KdeWallpaperSetter.hpp  SwayBgWallpaperSetter.hpp  WindowsWallpaperSetter.hpp
src/gui/: Application.cpp  Application.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  WindowsMain.cpp  main.cpp
src/gui/dialogs/: ErrorDialog.hpp  FluidSetupWizard.cpp  FluidSetupWizard.hpp  LibrarySelectionDialog.cpp  LibrarySelectionDialog.hpp  SetupDialog.cpp  SetupDialog.hpp  TagDialog.cpp  TagDialog.hpp  WorkspaceSelectionDialog.cpp  WorkspaceSelectionDialog.hpp
src/gui/models/: WallpaperObject.cpp  WallpaperObject.hpp
src/gui/utils/: LazyView.hpp
src/gui/views/: FavoritesView.cpp  FavoritesView.hpp  FolderView.cpp  FolderView.hpp  KeybindsView.cpp  KeybindsView.hpp  LibraryView.cpp  LibraryView.hpp  MonitorsView.cpp  MonitorsView.hpp  ProfilesView.cpp  ProfilesView.hpp  RecentView.cpp  RecentView.hpp  ScheduleView.cpp  ScheduleView.hpp  SettingsView.cpp  SettingsView.hpp  WorkshopView.cpp  WorkshopView.hpp  snippet_download.cpp  snippet_tail.cpp
src/gui/widgets/: DownloadIndicator.cpp  DownloadIndicator.hpp  HyprlandWorkspacesView.cpp  HyprlandWorkspacesView.hpp  MonitorConfigPanel.cpp  MonitorConfigPanel.hpp  MonitorLayout.cpp  MonitorLayout.hpp  PreviewPanel.cpp  PreviewPanel.hpp  ProfileEditDialog.cpp  ProfileEditDialog.hpp  ScheduleDialog.cpp  ScheduleDialog.hpp  SearchBar.cpp  SearchBar.hpp  Sidebar.cpp  Sidebar.hpp  TagEditorDialog.cpp  TagEditorDialog.hpp  TransitionDialog.cpp  TransitionDialog.hpp  WallpaperCard.cpp  WallpaperCard.hpp  WallpaperGrid.cpp  WallpaperGrid.hpp  WorkshopCard.cpp  WorkshopCard.hpp
src/gui/windows/: MiniPlayerWindow.cpp  MiniPlayerWindow.hpp  WindowsMainWindow.cpp  WindowsMainWindow.hpp
src/tray/: CMakeLists.txt  ITrayIcon.hpp  LinuxTrayIcon.cpp  LinuxTrayIcon.hpp  TrayIcon.cpp  TrayIcon.hpp  TrayIconFactory.hpp  WindowsTrayIcon.hpp  main.cpp
tests/: CMakeLists.txt  requirements.txt  unit_tests.cpp
tests/assets/web_wallpaper/: index.html  project.json
tests/unit/: ConfigManagerTests.cpp  SafeProcessTests.cpp  SchedulerTests.cpp  TransitionPolicyTests.cpp  WallpaperLibraryTests.cpp
(+20 files in other folders)
